All_Component_DX/force-app/main/default/objects/Parts_Request__c/Parts_Request__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>This object is used to capture part requests made from field engineers to other field engineers/warehouses/suppliers, and from warehouses to suppliers. Parts requests do not have the context of a service event.</description>
    <label>Parts Request</label>
    <nameField>
        <displayFormat>PRQ-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Parts Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>