All_Component_DX/force-app/main/default/objects/Parts_Request__c/fields/Canceled_on__c.field-meta.xml
<CustomField>
    <fullName>Canceled_on__c</fullName>
    <description>Date/time on which this parts request was canceled.</description>
    <inlineHelpText>Date/time on which this parts request was canceled.</inlineHelpText>
    <label>Canceled on</label>
    <type>DateTime</type>
</CustomField>