All_Component_DX/force-app/main/default/objects/Parts_Request__c/fields/Closed_By__c.field-meta.xml
<CustomField>
    <fullName>Closed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the salesforce user that closed this parts request.</description>
    <inlineHelpText>Name of the salesforce user that closed this parts request.</inlineHelpText>
    <label>Closed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Parts_Request_Closed_By</relationshipName>
    <type>Lookup</type>
</CustomField>