All_Component_DX/force-app/main/default/objects/Parts_Request__c/fields/Closed_On__c.field-meta.xml
<CustomField>
    <fullName>Closed_On__c</fullName>
    <description>Date/time when the request was completed.</description>
    <inlineHelpText>Date/time when the request was completed.</inlineHelpText>
    <label>Closed On</label>
    <type>DateTime</type>
</CustomField>