All_Component_DX/force-app/main/default/objects/Parts_Request__c/fields/IsPartner__c.field-meta.xml
<CustomField>
    <fullName>IsPartner__c</fullName>
    <description>Flag indicates if Parts Request is for/by a Partner or not.</description>
    <formula>IF( IsPartnerRecord__c ,&quot;True&quot;, &quot;False&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Flag indicates if Parts Request is for/by a Partner or not.</inlineHelpText>
    <label>Is Partner</label>
    <type>Text</type>
</CustomField>