All_Component_DX/force-app/main/default/objects/Parts_Request__c/fields/IsPartnerRecord__c.field-meta.xml
<CustomField>
    <fullName>IsPartnerRecord__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicates if Parts Request is for/by a Partner or not.</description>
    <inlineHelpText>Flag indicates if Parts Request is for/by a Partner or not.</inlineHelpText>
    <label>IsPartnerRecord</label>
    <type>Checkbox</type>
</CustomField>