All_Component_DX/force-app/main/default/objects/Parts_Request__c/fields/Requested_From__c.field-meta.xml
<CustomField>
    <fullName>Requested_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Location from where stock is requested. This is a lookup to an existing site record.</description>
    <inlineHelpText>Location from where stock is requested. This is a lookup to an existing site record.</inlineHelpText>
    <label>Requested From</label>
    <referenceTo>Site__c</referenceTo>
    <relationshipName>Parts_Request_From</relationshipName>
    <type>Lookup</type>
</CustomField>