All_Component_DX/force-app/main/default/objects/Parts_Request__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <description>Sum of Total Line Price</description>
    <inlineHelpText>Sum of Total Line Price</inlineHelpText>
    <label>Total Amount</label>
    <summarizedField>Parts_Request_Line__c.Total_Line_Price__c</summarizedField>
    <summaryForeignKey>Parts_Request_Line__c.Parts_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>