All_Component_DX/force-app/main/default/objects/Parts_Request__c/validationRules/SVMXC_ValidateLocationsAreSame.validationRule-meta.xml
<ValidationRule>
    <fullName>SVMXC_ValidateLocationsAreSame</fullName>
    <active>true</active>
    <description>From and To locations cannot be the same.</description>
    <errorConditionFormula>(Requested_From__c =  Required_At_Location__c)</errorConditionFormula>
    <errorDisplayField>Requested_From__c</errorDisplayField>
    <errorMessage>Requested From location cannot be the same as Required At Location.</errorMessage>
</ValidationRule>