All_Component_DX/force-app/main/default/objects/Parts_Request__c/validationRules/SVMXC_ValidateRequestedFromStockable1.validationRule-meta.xml
<ValidationRule>
    <fullName>SVMXC_ValidateRequestedFromStockable1</fullName>
    <active>true</active>
    <description>Requested From should be a stockable location if Supplier name is not entered.</description>
    <errorConditionFormula>AND(Company__c = &quot;&quot;, Requested_From__r.Stocking_Location__c = FALSE)</errorConditionFormula>
    <errorDisplayField>Requested_From__c</errorDisplayField>
    <errorMessage>Requested From should be a stockable location if Supplier name is not entered.</errorMessage>
</ValidationRule>