All_Component_DX/force-app/main/default/objects/Parts_Request__c/validationRules/SVMXC_ValidateRequestedFromStockable2.validationRule-meta.xml
<ValidationRule>
    <fullName>SVMXC_ValidateRequestedFromStockable2</fullName>
    <active>true</active>
    <description>Requested From should not be a stockable location if supplier name is provided</description>
    <errorConditionFormula>AND(Company__c &lt;&gt; &quot;&quot;, Requested_From__r.Stocking_Location__c = TRUE)</errorConditionFormula>
    <errorDisplayField>Requested_From__c</errorDisplayField>
    <errorMessage>Requested From should be a non-stockable location when supplier name is entered.</errorMessage>
</ValidationRule>