All_Component_DX/force-app/main/default/objects/Parts_Request__c/listViews/All_Parts_Requests.listView-meta.xml
<ListView>
    <fullName>All_Parts_Requests</fullName>
    <columns>NAME</columns>
    <columns>Requested_From__c</columns>
    <columns>Company__c</columns>
    <columns>Required_At_Location__c</columns>
    <columns>Status__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Parts Requests</label>
    <language>en_US</language>
</ListView>